@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Fix compilation error under gcc of the ctypes module bundled libffi for arm.
+
 - Issue #19523: Closed FileHandler leak which occurred when delay was set.
 
 - Issue #13674: Prevented time.strftime from crashing on Windows when given
